<resources>
    <string name="app_name">Artgram</string>
    <string name="upload">Upload</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>


    //errors
    <string name="network_error">Network error</string>
    <string name="server_error">Server Error</string>
    <string name="unauthorized_error">Unauthorized</string>
    <string name="bad_request_error">Bad Request</string>
    <string name="user_inactive">User not activated</string>
    <string name="not_found_error">Not found</string>
    <string name="not_allowed_error">Not allowed</string>
    <string name="timeout_error">Timeout</string>
    <string name="network_on_main_thread_error">Trying to run network work on main thread</string>
    <string name="unknown_error">Unknown error</string>
    <string name="wrong_credentials">Wrong credentials</string>
    <string name="forbidden_action">Forbidden action</string>
    <string name="invalid_fields">Invalid fields</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="nonexisting_user">User does not exist</string>
    <string name="bad_token">Token has expired or it is not valid</string>
    <string name="incorrect_token">Token is incorrect</string>
    <string name="sign_in">Sign in</string>
    <string name="invalid_user">Invalid User</string>
    <string name="desk_not_selected">Please, select desk and date!</string>

    //Validation
    <string name="validation_error_required">Input required</string>
    <string name="validation_error_email">Malformed email</string>
    <string name="validation_error_password_not_match">Passwords must match</string>
    <string name="too_short">Too short</string>
    <string name="invalid_pattern">Invalid pattern</string>
    <string name="validationError_required">Please enter a value</string>
    <string name="validationError_malformedEmail">Malformed email</string>
    <string name="code_length">Please, insert 8-digit code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_with_semicolon">Email:</string>
    <string name="welcome_to_artgram">Welcome to Artgram</string>
    <string name="password">Password</string>
    <string name="register_question">Don\'t have account yet?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="name_with_semicolon">Name:</string>
    <string name="register_to_artgram">Register to Artgram</string>
    <string name="change_password">Change password</string>
    <string name="change_name">Change name</string>
    <string name="log_out">Log out</string>
    <string name="enter_new_nickname">Enter new nickname here</string>
    <string name="nickname_semicolon">Nickname:</string>
    <string name="save">Save</string>
    <string name="success">Success</string>
    <string name="success_refresh_screen">Success! Please, refresh screen to see changes!</string>
    <string name="wrong_file_name">Wrong file name! Please, insert new one!</string>

    <string name="select_a_file" translatable="false">Select a file</string>
    <string name="file_to_save_semicolon">File to save:</string>
    <string name="nothing_selected_yet">Nothing selected yet</string>
    <string name="select_file">Select file</string>
    <string name="name_of_file_semicolon">Name of file:</string>
    <string name="enter_name">Enter name</string>
    <string name="images_by_semicolon">Images by:</string>
    <string name="uploading">Uploading...</string>
    <string name="actually_i_have_account">Actually I have account!</string>
    <string name="back_to_login">Back to Login</string>
</resources>