<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.artgram.viewmodels.ProfileViewModel" />

        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        tools:context=".ui.fragments.ProfileFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvProfileTitle"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/llName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmailTitle"
                style="@style/AppStandardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_with_semicolon"
                app:layout_constraintBottom_toTopOf="@id/etPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/etEmail"
                style="@style/AppStandardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@{viewModel.user.email}"
                app:layout_constraintBottom_toTopOf="@id/etPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvEmailTitle"
                tools:text="someemail11@gmail.com" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNameTitle"
                style="@style/AppStandardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname_semicolon"
                app:layout_constraintBottom_toTopOf="@id/etPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                style="@style/AppStandardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@{viewModel.user.nickName}"
                app:layout_constraintBottom_toTopOf="@id/etPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvEmailTitle"
                tools:text="John Doe" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogout"
            style="@style/LightRedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> viewModel.logout()}"
            android:text="@string/log_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llName" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChangeName"
            style="@style/LightRedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> viewModel.setNewNickNameIsVisible()}"
            android:text="@string/change_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogout" />

        <LinearLayout
            android:id="@+id/llChangeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="@{viewModel.newNickNameIsVisible == false ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="@+id/btnChangeName"
            app:layout_constraintStart_toStartOf="@+id/btnChangeName"
            app:layout_constraintTop_toBottomOf="@+id/btnChangeName">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etNewNickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_nickname" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSaveNewNickName"
                style="@style/LightRedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/save" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>